--- a/SquadApplication/AppShell.xaml
+++ b/SquadApplication/AppShell.xaml
@@ -3,12 +3,12 @@
     x:Class="SquadApplication.AppShell"
     xmlns="http://schemas.microsoft.com/dotnet/2021/maui"
     xmlns:x="http://schemas.microsoft.com/winfx/2009/xaml"
-    xmlns:local="clr-namespace:SquadApplication"
+    xmlns:local="clr-namespace:SquadApplication.ViewCustom"
     Title="SquadApplication">
 
     <ShellContent
         Title="Home"
-        ContentTemplate="{DataTemplate local:MainPage}"
-        Route="MainPage" />
+        ContentTemplate="{DataTemplate local:AuthorizedPage}"
+        Route="AuthorizedPage" />
 
 </Shell>
