--- a/SquadApplication/ViewCustom/AuthorizedPage.xaml
+++ b/SquadApplication/ViewCustom/AuthorizedPage.xaml
@@ -2,9 +2,11 @@
 <ContentPage xmlns="http://schemas.microsoft.com/dotnet/2021/maui"
              xmlns:x="http://schemas.microsoft.com/winfx/2009/xaml"
              x:Class="SquadApplication.ViewCustom.AuthorizedPage"
-             Title="AuthorizedPage">
-    <VerticalStackLayout>
+             Title="AuthorizedPage"            
+             BackgroundImageSource="hkauthorize.jpg"
+             >
+        <VerticalStackLayout>
         <Button Clicked="Button_Login" HeightRequest="50" WidthRequest="50" Text="Login"/>
-        <Button></Button>
+        <Button ></Button>
     </VerticalStackLayout>
 </ContentPage>
