--- a/SquadApplication/ViewCustom/ParticipantsPage.xaml
+++ b/SquadApplication/ViewCustom/ParticipantsPage.xaml
@@ -3,10 +3,13 @@
              xmlns:x="http://schemas.microsoft.com/winfx/2009/xaml"
              x:Class="SquadApplication.ViewCustom.ParticipantsPage"
              Title="ParticipantsPage">
-    <VerticalStackLayout>
-        <Label 
-            Text="Welcome to .NET MAUI!"
-            VerticalOptions="Center" 
-            HorizontalOptions="Center" />
-    </VerticalStackLayout>
+    <StackLayout Padding="10">
+        <Label Text="Участники" FontSize="24" HorizontalOptions="Center"/>
+        <CollectionView x:Name="ParticipantsLisyViewItem"  
+                        Background="Transparent"
+                        ItemsSource="{Binding Strings}"
+                        >
+            
+        </CollectionView>
+    </StackLayout>
 </ContentPage>
