--- a/SquadApplication/ViewCustom/PolygonsPage.xaml
+++ b/SquadApplication/ViewCustom/PolygonsPage.xaml
@@ -3,10 +3,17 @@
              xmlns:x="http://schemas.microsoft.com/winfx/2009/xaml"
              x:Class="SquadApplication.ViewCustom.PolygonsPage"
              Title="PolygonsPage">
-    <VerticalStackLayout>
+    <VerticalStackLayout Padding="10">
         <Label 
-            Text="Welcome to .NET MAUI!"
-            VerticalOptions="Center" 
+            Text="Polugons"
+            FontSize="24" 
             HorizontalOptions="Center" />
+        <CollectionView>
+            <CollectionView.ItemTemplate>
+                <DataTemplate>
+                    <Label Text="Polygon 1"/>
+                </DataTemplate>
+            </CollectionView.ItemTemplate>
+        </CollectionView>
     </VerticalStackLayout>
 </ContentPage>
