--- a/SquadApplication/ViewCustom/MainPage.xaml
+++ b/SquadApplication/ViewCustom/MainPage.xaml
@@ -4,18 +4,23 @@
              x:Class="SquadApplication.ViewCustom.MainPage"
              xmlns:local ="clr-namespace:SquadApplication.ViewCustom" 
              Title="MainPage"
-             BackgroundImageSource="hkauthorize.jpg"
-             
+             BackgroundImageSource="hkauthorize.jpg"             
              >
     
-    <VerticalStackLayout Padding="10" BackgroundColor="Transparent">    
+        <ScrollView           
+            
+            VerticalOptions="Center"
+            HorizontalOptions="Center"> 
+
+        
         <CollectionView
             x:Name="ListItems"
             Margin="10"            
             SelectionMode="Single"
             SelectionChanged="CollectionView_SelectionChanged"   
-            BackgroundColor="Transparent"
-            
+            BackgroundColor="Transparent"           
+            HorizontalOptions="Center"
+            VerticalOptions="Center"
             >
             <CollectionView.ItemsSource>
                 <x:Array Type="{x:Type x:String}">
@@ -25,17 +30,32 @@
                     <x:String>Участники</x:String>
                     <x:String>Прокаты</x:String>
                     <x:String>Профиль</x:String>
+                    <x:String>Заказы</x:String>
                 </x:Array>
             </CollectionView.ItemsSource>
             <CollectionView.ItemTemplate >
-                <DataTemplate>
-                    <Border  >
-                    <Label   Text="{Binding}" FontSize="20" BackgroundColor="Transparent" TextColor="DarkOliveGreen"  Margin="15" WidthRequest="200" HeightRequest="100" HorizontalOptions="Center" ></Label>
-                        
+                <DataTemplate>                    
+                    <Border
+                        Stroke="DarkGray"
+                        StrokeThickness="2"
+                        StrokeShape="22"
+                        Padding="1"
+                        >
+                        <Label 
+                        Text="{Binding}"
+                        TextColor="White"
+                        FontSize="19"
+                        BackgroundColor="Transparent"
+                        Margin="25"
+                        WidthRequest="100"
+                        HeightRequest="90"
+                        HorizontalOptions="Center"
+                        VerticalOptions="Center"
+                            />
+
                     </Border>
                 </DataTemplate>
             </CollectionView.ItemTemplate>
-        </CollectionView>   
-     
-    </VerticalStackLayout>
+        </CollectionView>
+        </ScrollView>
 </ContentPage>
